src/components/LearnCard/LearnCard.scss
.qui .qui-learn-card {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  border-radius: 2em;
  box-shadow: 0px 5px 5px #d2d2d2;
  padding: 1.7em 1.8em;
  margin-bottom: 1.2em;
}
.qui.qui-learn-card .is-hidden {
  display: none;
}
.qui.qui-learn-card-ribbon .qui-ribbon {
  opacity: 0.8;
  position: relative;
  z-index: 10;
}
.qui .qui-game-thumbnail {
  height: 12em;
  width: 12em;
  margin: 0.3em 1.5em 0 0;
  border-radius: 1.2em;
}
.qui .qui-learn-card-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.qui .qui-learn-card-title {
  max-width: 13em;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.qui .qui-learn-card-header h1 {
  margin: 0;
  font-size: 2.5em;
  font-weight: 500;
 
}
.qui .qui-tag-container {
  margin-bottom: 0.3em;
}
.qui .qui-points {
  display: flex;
  align-items: center;
}
.qui .qui-coin-image {
  height: 3.5em;
  width: 3.5em;
}
.qui .qui-info {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 90%;
  margin-top: 0.4em;
}
.qui .qui-info img{
  height: 3.5em;
  width: 3.5em;
  margin-right: 0.5em;
}
.qui .qui-lower-container {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.qui .qui-lower-container i {
  margin-right: 0.5em;
}
.qui .qui-single-tag {
  padding: 0.5em;
  border-radius: 0.6em;
}
.qui .qui-tags {
  display: flex;
  flex-wrap: wrap;
  width: 90%;
}
.qui .qui-tags p {
  font-size: 1.3em;
  margin: 0;
  margin-right: 1em;
}
.qui .qui-banner {
  position: absolute;
  bottom: 1%;
  right: 3%;
  height: 5.5em;
  width: 0.7em;
}
.qui .qui-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: relative;
  z-index: 2;
  margin-left: 1.5em;
  min-height: 14em;
  width: 100%;
}
.qui .qui-info i {
  font-size: 2.7em;
}
.qui .qui-description {
  display: flex;
  align-items: center;
}
.qui .qui-description p {
  margin: 0;
  font-weight: lighter;
  font-size: 1.8em;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}
.qui-see-more-tags {
  display: flex;
  align-items: flex-end;
  padding-bottom: 0.5em;
}
.qui-see-more-tags a {
  font-size: 1.5em;
}
.qui-see-more-tags a {
  text-decoration: none;
}
.qui-all-variants {
  height: 100%;
}
@media only screen and (min-width: 320px) {
  .qui-card-label .qui-ribbon {
    font-size: 0.5em;
  }
  .qui-learn-card {
    font-size: 0.32em;
  }
}
@media only screen and (min-width: 481px) {
  .qui .qui-card-label .qui-ribbon {
    font-size: 0.7em;
  }
  .qui .qui-learn-card {
    font-size: 0.5em;
  }
}
@media only screen and (min-width: 540px) {
  .qui .qui-card-label .qui-ribbon {
    font-size: 0.85em;
  }
  .qui .qui-learn-card {
    font-size: 0.6em;
  }
}
@media only screen and (min-width: 768px) {
  .qui .qui-card-label .qui-ribbon {
    font-size: 1.2em;
  }
  .qui .qui-learn-card {
    font-size: 0.73em;
  }
}
@media only screen and (min-width: 1024px) {
  .qui .qui-card-label .qui-ribbon {
    font-size: 1.2em;
  }
  .qui .qui-learn-card {
    font-size: 0.9em;
  }
}

